# sveltodo

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json
backend/: Cargo.toml  Dockerfile
backend/src/entity/: mod.rs  prelude.rs  tasks.rs  users.rs
backend/src/routes/: get_user_tasks.rs  update_task_status.rs
backend/src/utils/: tasks.rs  users.rs  utils.rs
database/: init.sql
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: store.ts
frontend/src/lib/: TaskModal.svelte
frontend/src/routes/: +page.svelte
frontend/src/routes/dashboard/: +page.svelte  icons.ts
src/: main.rs  store.ts
src/entity/: users.rs
src/lib/: ModalExampleForm.svelte
src/routes/: +page.svelte  create_task.rs  delete_task.rs  get_user_tasks.rs  jwt_middleware.rs  login.rs  mod.rs  register.rs  update_task.rs
src/routes/dashboard/: +page.svelte  tasks.ts
src/routes/register/: +page.svelte
src/utils/: mod.rs
