[package]
name = "todo-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.1"
axum = { version = "0.6.20", features = ["macros"] }
axum-extra = { version = "0.7.7", features = ["cookie", "cookie-private", "cookie-key-expansion"] }
chrono = "0.4.26"
cookie = "0.17.0"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
sea-orm = { version = "0.12.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.183", features = ["derive"] }
tokio = { version = "1.30.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["cors"] }
